cambios de variables

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
-    <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
+    <link rel="shortcut icon" href="../src/style/index.css" />
     <script
       src="https://kit.fontawesome.com/072e5df971.js"
       crossorigin="anonymous"
@@ -52,7 +52,7 @@
         <label>Instagram</label>
         <input class="picker" for="instagram" type="text" />
       </li>
-      <li>https://themes.hibootstrap.com/palmela/home-three/
+      <li>
         <label>Role</label>
         <select class="picker" for="role">
           <option value="">null</option>
@@ -69,6 +69,7 @@
           <option value="Munich">Munich</option>
           <option value="Caracas">Caracas</option>
           <option value="Toronto">Toronto</option>
+          <option value="Toronto">Santiago de Chile</option>
         </select>
       </li>
       <li>
