--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
           <option value="Germany">Germany</option>
           <option value="Canada">Canada</option>
           <option value="Venezuela">Venezuela</option>
+          <option value="Venezuela">Chile</option>
         </select>
       </li>
     </ul>
